# ocolos-public

./: .README.md.swp  LICENSE.md  Makefile  README.md  config
BOLT_replace/: BinaryContext.cpp  RewriteInstance.cpp
build-accelerator/rca-clang/: Cargo.toml  Makefile  README
build-accelerator/rca-clang-new/: Cargo.toml  README.md  build.rs
build-accelerator/rca-clang-new/src/: lib.rs
build-accelerator/rca-clang-new/src/c/: c_functions.c
build-accelerator/rca-clang/src/: lib.rs
build-accelerator/rca-clang/src/dummy_client/: main.rs  main.rs.tmp
build-accelerator/rca-clang/src/server/: main.rs
elf-extract/: Cargo.toml  elf-extract.h
elf-extract/src/: lib.rs
hook-function-pointers-llvm/: HookFunctionPointers.cpp  HookFunctionPointers.h  llvm-clang.diff
scripts/: C1_BOLTed_performance_test.sh
src/: .extract_call_sites.cpp.swo  boost_serialization.hpp  extract_call_sites.cpp  extract_machine_code.cpp  extract_machine_code.hpp  infrastructure.cpp  infrastructure.hpp  ptrace_pause.cpp  ptrace_pause.hpp  replace_function.cpp  replace_function.hpp  tracer.cpp  utils.cpp  utils.hpp
