[package]
name = "elf-extract"
version = "0.1.0"
authors = ["Joe Devietti <devietti@cis.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.28.3"
once_cell = "1.10.0"

[lib]
# https://doc.rust-lang.org/reference/linkage.html
name = "elf_extract"
crate-type = ["lib", "staticlib"] # NB: "lib" required by src/bin/nm.rs
