[package]
name = "rca"
version = "0.1.0"
authors = ["FLOAR team"]
edition = "2018"
links = "c_functions"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "1.0"
libc = "0.2"

[build-dependencies]
gcc = "0.3"

[lib]
name = "rca"
crate_type = ["dylib"]
