[package]
name = "rca"
version = "0.1.0"
authors = ["FLOAR team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "1.0"
libc = "0.2"
unix-ipc = "0.2.0"
serde = "1.0.117"
core_affinity = "0.5.10"

[build-dependencies]
gcc = "0.3"

[lib]
name = "rca"
crate_type = ["dylib"]

[[bin]]
name = "server"
path = "src/server/main.rs"

#[[bin]]
#name = "client"
#path = "src/dummy_client/main.rs"
